# lyrics

./: Cargo.toml  flake.nix
src/: cider.rs  lyrics.rs  main.rs  overlay.rs
