[package]
name = "lyrics-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wayland
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-protocols-wlr = "0.3"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# HTTP client for LRCLIB
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Text rendering (proper font rendering with shaping & antialiasing)
cosmic-text = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# URL encoding
urlencoding = "2"

# Unix signals
libc = "0.2"
